--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 html, body {
-  background-color: #121212;
+  background-color: #e9573f;
   color: #121212;
   font-family: Roboto;
   text-align: center;
@@ -194,7 +194,75 @@ html, body {
     padding: 10px 0px 10px 0;
   }
 
+/* Footer */
+  #footer {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: 100%;
+    background-color: #e9573f;
+  }
+
+  #footer button {
+    font-size: 1.5em;
+    padding: 10px;
+    font-weight: bold;
+    background-color: #ffff71;
+    border: none;
+    margin-top: 25px;
+  }
+
+  #footer a {
+    font-size: 1.5em;
+    text-decoration: none;
+    color: #121212;
+  }
+
+  #footer a:hover {
+    font-size: 1.5em;
+    text-decoration: none;
+    color: black;
+  }
+
 @media (max-width: 600px) {
+  #home {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    background-color: #e9573f;
+  }
+
+  #home img {
+    margin: 20px;
+    width: 300px;
+    height: auto;
+  }
+
+  #home button {
+    font-size: 1.5em;
+    padding: 10px;
+    font-weight: bold;
+    background-color: #ffff71;
+    border: none;
+  }
+
+  #home a {
+    font-size: 1.5em;
+    text-decoration: none;
+    color: #121212;
+  }
+
+  #home a:hover {
+    font-size: 1.5em;
+    text-decoration: none;
+    color: black;
+  }
+
   #IP {
     display: flex;
     align-items: center;
@@ -320,4 +388,35 @@ html, body {
     margin: 0;
     padding: 10px 0px 10px 0;
   } 
+
+  #footer {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: 100%;
+    background-color: #e9573f;
+    padding: 25px;
+  }
+
+  #footer button {
+    font-size: 1.5em;
+    padding: 10px;
+    font-weight: bold;
+    background-color: #ffff71;
+    border: none;
+  }
+
+  #footer a {
+    font-size: 1.5em;
+    text-decoration: none;
+    color: #121212;
+  }
+
+  #footer a:hover {
+    font-size: 1.5em;
+    text-decoration: none;
+    color: black;
+  }
 }
